[package]
name = "rayon-scan"
version = "0.1.0"
edition = "2021"
authors = ["Ariel Uy"]
description = "A parallel prefix scan function for ParallelIterator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arieluy/rayon-scan"
documentation = "https://docs.rs/rayon-scan"
homepage = "https://crates.io/crates/rayon-scan"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

[dependencies]
rayon = "1.8.1"

[dev-dependencies]
ndarray = "0.15.6"